--- a/Directory/package.json
+++ b/Directory/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-hw1",
+  "homepage": "https://github.com/mvanhan/mvanhan.github.io/Directory",
   "version": "0.1.0",
   "private": true,
   "scripts": {
